--- a/wallet_server/templates/index.html
+++ b/wallet_server/templates/index.html
@@ -43,10 +43,6 @@
                      data: JSON.stringify(transaction_data),
                      success: function (response) {
                          console.info(response);
-                         if ($.parseJSON(response).message ==="fail"){
-                            alert("Failed")
-                            return
-                         }
                          alert('Send success');
                      },
                      error: function (response) {
@@ -55,6 +51,30 @@
                      }
                  })
              })
+
+             function reload_amount() {
+                 let data = {'blockchain_address': $('#blockchain_address').val()}
+                 $.ajax({
+                     url: '/wallet/amount',
+                     type: 'GET',
+                     data: data,
+                     success: function (response) {
+                         let amount = response['amount'];
+                         $('#wallet_amount').text(amount);
+                         console.info(amount)
+                     },
+                     error: function(error) {
+                         console.error(error)
+                     }
+                 })
+             }
+
+             $('#reload_wallet').click(function(){
+                 reload_amount();
+             });
+
+             // setInterval(reload_amount, 3000)
+
          })
 
     </script>
